--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
     <thead>
       <tr>
         <th></th>
-        <th id="day0">-月--日</th>
-        <th id="day1">-月--日</th>
+        <th id="day0">--月--日</th>
+        <th id="day1">--月--日</th>
+        <th id="day2">--月--日</th>
       </tr>
     </thead>
     <tbody>
@@ -28,21 +29,25 @@
           <th>天気</th>
           <td id="weathercode0">--</td>
           <td id="weathercode1">--</td>
+          <td id="weathercode2">--</td>
         </tr>
         <tr>
           <th>最高気温</th>
           <td id="temperature_2m_max0">--°C</td>
           <td id="temperature_2m_max1">--°C</td>
+          <td id="temperature_2m_max2">--°C</td>
         </tr>
         <tr>
           <th>最低気温</th>
           <td id="temperature_2m_min0">--°C</td>
           <td id="temperature_2m_min1">--°C</td>
+          <td id="temperature_2m_min2">--°C</td>
         </tr>
         <tr>
           <th>降水量</th>
           <td id="precipitation_sum0">--mm</td>
           <td id="precipitation_sum1">--mm</td>
+          <td id="precipitation_sum2">--mm</td>
         </tr>
       </tbody>
     </table>
