--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   <script src="main.js"></script>
 </head>
 <body id="body">
-  <h1>東京天気予報
-  </h1>
+  <h1>北海道の天気</h1>
 
   <div id="time">----年--月--日 --:--:--</div>
 
