--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body id="body">
   <h1>北海道の天気</h1>
-
+  <img src="job_kisyou_yohou.png">
   <div id="time">----年--月--日 --:--:--</div>
 
 
